# cli-proxy-api-ui

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  process.rs  providers.rs  settings.rs  terminal.rs  tray.rs
