[package]
name = "cli-proxy-api-ui"
version = "0.1.1"
description = "Desktop control panel for cli-proxy-api"
authors = ["cli-proxy-api-ui"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
which = "7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
